<resources>
    <string name="app_name" translatable="false">KCO:Chhattisgarh</string>
    <string name="UsefulLinks">Here are some useful websites to keep you up to date about covid-19</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StateName">StateName</string>
    <string name="Tool_bar"><h1 style="color:red;">Knock Covid Out</h1></string>
    <string name="Prevention_products_Hindi">View in hindi</string>
    <string name="Prevention_products_Eng">View in english</string>
    <string name="General_Awareness_Images">Image\'s</string>
    <string name="B_View_in_hindi">View in hindi</string>
    <string name="General_Awareness_Video">Video\'s</string>
    <string name="In_Stats_1">Country stats </string>
    <string name="In_Stats_2">State wise stats in India </string>
    <string name="Contact_for_help">Contact for help </string>
    <string name="Symptom">Symptom and precaution</string>
    <string name="WHO">World health organisation</string>
    <string name="NHP">national health protocol </string>
    <string name="MOHNFW">ministry of health and\n family welfare</string>
    <string name="GLOBAL">covid19 global tracker</string>
    <string name="GOOGLE">google covid-19 map</string>
    <string name="B_View_in_English">View in English</string>
    <string name="GA">general awareness</string>
    <string name="PP">prevention product</string>
    <string name="Useful_links">useful links</string>
    <string name="Donation_state">Donate</string>
    <string name="Corona_Hospitals">testing and relief centres</string>
    <string name="FAQ_In_ENG">For more</string>
    <string name="FAQ">FAQ</string>
    <string name="FOR_MORE">For more</string>
    <string name="FAQ_Q1">Q1-What is a coronavirus?</string>
    <string name="FAQ_Q2">Q2-What is COVID-19?  </string>
    <string name="FAQ_Q3">Q3-Who is at risk of developing severe illness?  </string>
    <string name="FAQ_Q4">Q4-How does COVID-19 spread? </string>
    <string name="FAQ_Q5">Q5-Can the virus that causes COVID-19 be transmitted through the air? </string>
    <string name="FAQ_A1"> Coronaviruses are a large family of viruses which may cause illness in animals or humans.  In humans, several coronaviruses are known to cause respiratory infections ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS). The most recently discovered coronavirus causes coronavirus disease COVID-19. </string>
    <string name="FAQ_A2"> COVID-19 is the infectious disease caused by the most recently discovered coronavirus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019. </string>
    <string name="FAQ_A3">  While we are still learning about how COVID-2019 affects people, older persons and persons with pre-existing medical conditions (such as high blood pressure, heart disease, lung disease, cancer or diabetes) appear to develop serious illness more often than others.   </string>
    <string name="FAQ_A4"> People can catch COVID-19 from others who have the virus. The disease can spread from person to person through small droplets from the nose or mouth which are spread when a person with COVID-19 coughs or exhales. These droplets land on objects and surfaces around the person. Other people then catch COVID-19 by touching these objects or surfaces, then touching their eyes, nose or mouth. People can also catch COVID-19 if they breathe in droplets from a person with COVID-19 who coughs out or exhales droplets. This is why it is important to stay more than 1 meter (3 feet) away from a person who is sick. </string>
    <string name="FAQ_A5"> Studies to date suggest that the virus that causes COVID-19 is mainly transmitted through contact with respiratory droplets rather than through the air.  See previous answer on “How does COVID-19 spread?” </string>
    <string name="Video_1"><a href="https://www.youtube.com/watch?v=O9Zyrd_vLqo">https://www.youtube.com/watch?v=O9Zyrd_vLqo</a></string>
    <string name="video_2"><a href="https://www.youtube.com/watch?v=mYCtbgH4SKQ">https://www.youtube.com/watch?v=mYCtbgH4SKQ </a>    </string>
    <string name="video_3"><a href="https://www.youtube.com/watch?v=ICVYlNmb6NY">https://www.youtube.com/watch?v=ICVYlNmb6NY </a>    </string>
    <string name="video_4"><a href="https://www.youtube.com/watch?v=Y9VgmhxtJFk">https://www.youtube.com/watch?v=Y9VgmhxtJFk </a>    </string>
    <string name="video_5"><a href="https://www.youtube.com/watch?v=djivDj8mMuQ">https://www.youtube.com/watch?v=djivDj8mMuQ </a>    </string>
    <string name="video_6"><a href="https://www.youtube.com/watch?v=eRTFbKdrWz8"> https://www.youtube.com/watch?v=eRTFbKdrWz8</a>    </string>
    <string name="video_7"><a href="https://www.youtube.com/watch?v=UEfCxCLtOwk">https://www.youtube.com/watch?v=UEfCxCLtOwk </a>    </string>
    <string name="video_8"><a href="https://www.youtube.com/watch?v=pxoIufVFjOk"> https://www.youtube.com/watch?v=pxoIufVFjOk</a>    </string>
    <string name="Picture_1"> <a href="https://www.pngitem.com/middle/JJTmRm_transparent-cartoon-nose-png-runny-nose-clipart-png/">https://www.pngitem.com/middle/JJTmRm_transparent-cartoon-nose-png-runny-nose-clipart-png/ </a> </string>
    <string name="Picture_2"> <a href="http://clipart-library.com/clip-art/headache-transparent-12.htm">http://clipart-library.com/clip-art/headache-transparent-12.htm </a>  </string>
    <string name="Picture_3"> <a href="https://www.pngwing.com/en/search?q=cough"> https://www.pngwing.com/en/search?q=cough</a>  </string>
    <string name="Picture_4"> <a href="https://dlpng.com/png/4045801"> https://dlpng.com/png/4045801</a>  </string>
    <string name="Picture_5"> <a href="https://imgbin.com/png/ZwKWuz2i/fever-child-eye-png">https://imgbin.com/png/ZwKWuz2i/fever-child-eye-png </a>  </string>
    <string name="Picture_6"> <a href="https://www.shutterstock.com/search/difficulty+breathing">https://www.shutterstock.com/search/difficulty+breathing </a>  </string>
    <string name="Picture_7"> <a href="https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/what-you-can-do.html">https://www.cdc.gov/coronavirus/2019-ncov/need-extra-precautions/what-you-can-do.html </a>  </string>
    <string name="Picture_8"> <a href="https://www.freepik.com/free-photos-vectors/clean">https://www.freepik.com/free-photos-vectors/clean </a>  </string>
    <string name="Picture_9"> <a href="https://pngio.com/">https://pngio.com/ </a>  </string>
    <string name="World">World</string>
    <string name="India">India</string>
    <string name="positive_cases">Confirmed</string>
    <string name="Deaths">Deaths</string>
    <string name="Hospitalized">Active</string>
    <string name="Recovered">Recovered</string>
    <string name="SYMPTOMS">SYMPTOMS</string>
    <string name="Runny_nose">Runny nose</string>
    <string name="HEAd">Headache</string>
    <string name="T_Cough">Cough</string>
    <string name="Sore_Throat">Sore Throat</string>
    <string name="T_FEVER">Fever</string>
    <string name="T_Maintain_cleanliness">Maintain cleanliness</string>
    <string name="T_Keep_your_mouth_covered">Keep your mouth covered</string>
    <string name="T_Stay_in_home">Stay in home</string>
    <string name="T_Avoid_sick_people">Avoid sick people</string>
    <string name="T_PRECAUTIONS">PRECAUTIONS</string>
    <string name="T_Difficulty_in_breathing">Difficulty in breathing</string>
    <string name="T_Wash_hands_frequently">Wash hands frequently</string>
    <string name="T_Do_not_touch_your_face">Do not touch your face</string>
    <string name="DonationLink">
                   Help India to win this fight against COVID-19.\nDonate in
            <a href="https://www.pmcares.gov.in/en/">PM CARES.</a>
                </string>
    <string name="RunnyNose">
                            A runny nose is excess nasal drainage. It may be a thin clear fluid, thick mucus or something in between.
            But runny nose is not the only/exactly a symptom of COVID-19
                </string>
    <string name="Headache">
                        Headache is the symptom of pain in the face, head, or neck. It can occur as a migraine, tension-type headache, or cluster headache.
                </string>
    <string name="Cough">
             A cough, also known as tussis, is a voluntary or involuntary act that clears the throat and breathing passage of foreign particles,microbes,fluids,and mucus; it is a rapid expulsion of air from the lungs. Coughing can be done deliberately or as part of a reflex.
                </string>
    <string name="SoreThroat">
                    Pain or irritation in the throat that can occur with or without swallowing, often accompanies infections, such as a cold or flu.Examples include overuse of voice,very dry mouth or sleeping with the mouth open.
                </string>
    <string name="Fever">
                    A fever is a body temperature that is higher than normal. A normal temperature is usually around 98.6 F.
            if body temperature of any person is more then 100.4°F/38°C or higher then the person cough, or trouble breathing
                </string>
    <string name="DifficultyInBreathing">
                    Breathing difficulty describes discomfort when breathing and feeling as if you can\'t draw a complete breath. This can develop gradually or come on suddenly.
                </string>
    <string name="washHands">
                        Hand washing, also known as hand hygiene, is the act of cleaning one\'s hands for the purpose of removing soil, grease, microorganisms, or other unwanted substances.
                </string>
    <string name="DoNotTouchYourFace">
                    Avoid touching the face again and again because it is one of the reason for fast trasmission of COVID-19 virus to trasmit into lungs.
                </string>
    <string name="Terms_Conditions">Terms and condition</string>
    <string name="TermsAndCondition1">1.\tRetention of Rights of Ownership/Ban on Infringement</string>
    <string name="TermsAndCondition2"> 2. Retention of the Right to Change the App at Any Times</string>
    <string name="TermsAndCondition3"> 3. Restriction on App Abuses</string>
    <string name="TermsAndCondition4">4. Disclaimer of Warranties and Liabilities</string>
    <string name="TermsAndCondition5">5. Retention of Right to Terminate/Ban User</string>
    <string name="share">Share</string>
    <string name="feed_back">Feed back</string>
    <string name="about">About</string>
    <string name="contact_us">Contact us</string>
    <string name="sources">Sources</string>
    <string name="sources_line_1">1. PNG item - <a href="https://www.pngitem.com/">https://www.pngitem.com/</a> </string>
    <string name="sources_line_2">2. Clipart library - <a href="http://clipart-library.com/">http://clipart-library.com/</a> </string>
    <string name="sources_line_3">3. PNGWing - <a href="https://www.pngwing.com/">https://www.pngwing.com/</a> </string>
    <string name="sources_line_4">4. Dl png - <a href="https://dlpng.com/">https://dlpng.com/</a> </string>
    <string name="sources_line_5">5. IMG Bin - <a href="https://imgbin.com/">https://imgbin.com/</a></string>
    <string name="sources_line_6">6. Shutterstock - <a href="https://www.shutterstock.com/">https://www.shutterstock.com/</a></string>
    <string name="sources_line_7">7. Freepik - <a href="https://www.freepik.com/">https://www.freepik.com/</a></string>
    <string name="sources_line_8">8. Pngio - <a href="https://pngio.com/">https://pngio.com/</a></string>
    <string name="sources_line_9">9. Flaticon - <a href="https://www.flaticon.com/authors/eucalyp">https://www.flaticon.com/authors/eucalyp</a></string>
</resources>