<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >


<!--    <item android:id="@+id/Languages"-->
<!--        android:title="@string/languages"-->
<!--        app:showAsAction ="ifRoom"-->
<!--        android:icon="@drawable/languagew"-->
<!--        />-->

    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction ="ifRoom"
        />



<!--    <item android:id="@+id/FAQ"-->
<!--        android:title="@string/faq"-->
<!--        app:showAsAction ="never"-->
<!--        />-->



    <item android:id="@+id/Sources"
        android:title="@string/sources"
        app:showAsAction="never"

        />

    <item android:id="@+id/feedBack"
    android:title="@string/feed_back"
    app:showAsAction ="never"
    />

<!--    <item android:id="@+id/Reselect_state"-->
<!--        android:title="Reselect state"-->
<!--        app:showAsAction="never"-->

<!--        />-->

    <item android:id="@+id/Reselect_district"
        android:title="Reselect district"
        app:showAsAction="never"

        />
    <item android:id="@+id/contactUs"
    android:title="@string/contact_us"
    app:showAsAction ="never"
    />

    <item android:id="@+id/about"
    android:title="@string/about"
    app:showAsAction ="never"
    />

<!--    <item android:id="@+id/LogOut"-->
<!--    android:title="Log out"-->
<!--    app:showAsAction ="never"-->
<!--    />-->

<!--    <item android:id="@+id/sendCrashReport"-->
<!--    android:title="Send crash report"-->
<!--    app:showAsAction ="never"-->
<!--    />-->

<!--    <item android:id="@+id/yourProfile"-->
<!--    android:title="Your Profile"-->
<!--    app:showAsAction ="never"-->
<!--    />-->



</menu>